--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,8 @@
 .res-container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: left;
+    gap:70px;
 }
 
 .res-image{
@@ -36,8 +37,9 @@
 .res-card-text{
     margin:10px;
 }
+
 .res-card{
-    margin: 20px;
+    margin: 0px 20px;
     padding: 15px;
     width: 250px;
 }
@@ -51,15 +53,38 @@
 
 .filter-bar {
   display: flex;
-  justify-content: right;
+  justify-content: space-between;
   margin: 10px 0px;
   padding: 10px;
   background-color: #f0f0f0;
   border-radius: 15px;
+  height: 40px;
 }
+
+.search-bar{
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  gap: 8px;
+  padding: 10px;
+
+}
+
+.search-input{
+  width: 280px; 
+  padding: 12px 80px;
+  padding-left: 10px;
+  border: 2px solid orangered;
+  border-radius: 5px;
+  font-size: 16px;
+  margin-left: 500px;
+  outline: none;              
+}
+
 
 .top-rated-btn , .reset-btn {
   background-color: orangered;
+  max-height: 35x;
   color: white;
   border: 1px;
   padding: 10px 10px;
@@ -95,4 +120,5 @@
     border-radius: 20px;
     background-color: #e0e0e0;
 }
+
 
